# pygemini

./: .codespellrc  .flake8  .gitignore  .mypy.ini  MANIFEST.in  Readme.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  ci_mac.yml  ci_prereq.yml  ci_windows.yml
.github/workflows/composite-gemini3d/: action.yml
.github/workflows/composite-pkg/: action.yml
.github/workflows/composite-python/: action.yml
Examples/: msis_setup.py
archive/: install.py  prereqs.py  test_prereqs.py  test_wsl.py  wsl.py
example/: plot_Efield.py  plot_mayavi.py  plot_slices.py  plotdata.py  print_simsize.py
scripts/: convert_data.py  convert_data_hdf5.py  convert_grid.py  convert_grid_hdf5.py  convert_neutral.py  convert_patch.py  generate_reference_data.py  grid2hdf.py  install_prereqs.py  plot_Efield.py  plot_all_subdir.py  plot_look_all.py  plot_mayavi.py  plot_neutral.py  plot_patch.py  plot_slices.py  plotdata.py  print_simsize.py  raw_data2hdf5.py  raw_grid2hdf5.py  setup_matlab_engine.py  zenodo_zip.py
src/gemini3d/: CMakeLists.txt  __init__.py  __main__.py  archive.py  base.py  build.py  compare.py  compile_prereqs.py  conductivity.py  config.py  coord.py  efield.py  fileio.py  find.py  git.cmake  grid.py  hdf.py  hpc.py  install.py  job.py  libraries.json  linux_info.py  magcalc.py  magtools.py  matlab.py  model.py  model_setup.py  mpi.py  msis.py  namelist.py  nc4.py  particles.py  phys_const.py  plasma.py  plot.py  plotdiff.py  prereqs.py  raw.py  read.py  readdata.py  (+10 more)
src/gemini3d/cmake/: __init__.py  build.py  find.py  git.cmake
src/gemini3d/compare/: __init__.py  __main__.py  efield.py  grid.py  input.py  inputs.py  out.py  plot.py  precip.py  tolerance.json  utils.py
src/gemini3d/efield/: Efield_erf.py  Jcurrent_gaussian.py  __init__.py
src/gemini3d/grid/: cartesian.py  convert.py  gridmodeldata.py  newton_method.py  tilted_dipole.py  uniform.py
src/gemini3d/hdf5/: read.py  write.py
src/gemini3d/nc4/: read.py  write.py
src/gemini3d/particles/: __init__.py  core.py  gaussian2d.py  grid.py
src/gemini3d/patch/: __init__.py  convert.py  plot.py
src/gemini3d/plot/: __init__.py  __main__.py  cartesian.py  constants.py  core.py  curvilinear.py  diff.py  glow.py  grid.py  input.py  inputs.py  render.py  slices.py  vis.py  vis3d.py
src/gemini3d/postprocess/: __init__.py  collisions3D.py  conduct_all_points.py  conductivities3D.py
src/gemini3d/raw/: __init__.py  read.py
src/gemini3d/tests/: __init__.py  conftest.py  gemini3d_url.ini  ref_data.json  test_build.py  test_config.py  test_dryrun.py  test_find.py  test_grid_matlab.py  test_msis.py  test_plot.py  test_prereqs.py  test_project.py  test_unit.py
src/gemini3d/tests/config/: __init__.py  config_example.nml  config_msis2.nml  config_msis20.nml
src/gemini3d/tests/intg/: test_dryrun.py  test_grid.py  test_grid_matlab.py  test_magcalc.py  test_model.py  test_msis.py  test_plot.py  test_prereqs.py  test_project.py  test_stimulus.py
src/gemini3d/tests/unit/: dummy.py  test_config.py  test_find.py  test_unit.py  test_wsl.py
