[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 100
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | subprojects
)/
'''

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)s"
addopts = "--ignore=archive/"
