[metadata]
name = gemini3d
version = 0.8.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = 3-D ionospheric model plotting suite
url = https://github.com/gemini3d/gemini
keywords =
  mesosphere
  stratosphere
  thermosphere
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages=find:
python_requires = >= 3.7
zip_safe = False
include_package_data = True
install_requires =
  numpy >= 1.16.0
  scipy
  h5py
  psutil >= 5.6.2
  # psutil is not strictly needed, but parallel computations can be needlessly slow without
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest >= 3.9
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plots =
  mayavi
  matplotlib >= 3.1
