[metadata]
name = gemini3d
version = 1.3.2
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = 3-D ionospheric model plotting suite
url = https://github.com/gemini3d/gemini
keywords =
  mesosphere
  stratosphere
  thermosphere
  ionosphere
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages=find:
python_requires = >= 3.7
zip_safe = False
include_package_data = True
install_requires =
  numpy >= 1.17.0
  # 1.17 for interp1d(..., fill_value="extrapolate")
  scipy
  xarray
  h5py >= 3.0.0
  # h5py 3.0.0 fixes conflicts with HDF5 1.12
  psutil >= 5.6.2
  # psutil is needed for job.py, as parallel computations can be needlessly slow without
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest >= 3.9
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy >= 0.800
plots =
  matplotlib >= 3.1

# mayavi for 3D plots
